--- a/uasdm-ui/src/app/shared/component/modal/error-modal.component.html
+++ b/uasdm-ui/src/app/shared/component/modal/error-modal.component.html
@@ -9,7 +9,7 @@
 
         <!-- <div class="row"> -->
             <div class="button-holder">
-                <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
+                <button type="button" class="btn btn-default" (click)="close()">Close</button>
             </div>
         <!-- </div> -->
     </form>
