chore: relabel 'is private' to 'make private'

--- a/uasdm-ui/src/app/site/component/modal/create-collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/create-collection-modal.component.html
@@ -131,7 +131,7 @@
 
           <div [@fadeInOnEnter] class="row" *ngIf="hasField('isPrivate')">
             <div class="col-md-8">
-              <boolean-field [(value)]="page.selection.isPrivate" label="Is Private">
+              <boolean-field [(value)]="page.selection.isPrivate" label="Make Collection Private">
               </boolean-field>
             </div>
           </div>
