--- a/uasdm-ui/src/app/site/component/modal/create-standalone-product-group-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/create-standalone-product-group-modal.component.html
@@ -98,7 +98,7 @@
 
           <div [@fadeInOnEnter] class="row">
             <div class="col-md-8">
-              <boolean-field [(value)]="metadata.isPrivate" label="Is Private">
+              <boolean-field [(value)]="metadata.isPrivate" label="Make Product Private">
               </boolean-field>
             </div>
           </div>
