--- a/uasdm-ui/src/app/site/component/imagery-panel/imagery-panel.component.html
+++ b/uasdm-ui/src/app/site/component/imagery-panel/imagery-panel.component.html
@@ -1,12 +1,13 @@
 <ng-container>
     <div class="row">
-        <div class="col-md-12">
-
-            <div class="btn-holder" style="text-align: right;padding: 0 10px 10px 0;">
-                <button type="button" (click)="handleClose()" class="btn btn-default" role="button"
-                    aria-disabled="false" style="padding: 4px 18px;">
-                    <span class="ui-button-text">Close</span>
-                </button>
+        <div class="col-md-10">
+            <h4>Current Map Imagery</h4>
+        </div>
+        <div class="col-md-2">
+            <div class="btn-holder" style="float: right; text-align: right;padding: 0 10px 10px 0;">
+                <a (click)="handleClose()">
+                    <i class="fa fa-window-close"></i>
+                </a>
             </div>
         </div>
     </div>
@@ -68,7 +69,7 @@
                                     <div class="col-sm-4">
                                         <a class="fa fa-info-circle product-icon" (click)="handleGetInfo(layer)"
                                             title="View more information layer.">Get Info</a>
-                                    </div>                                    
+                                    </div>
 
                                 </div>
 
