--- a/uasdm-ui/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/product-modal.component.html
@@ -156,7 +156,7 @@
     </div> -->
       <div *ngIf="!isStandalone()">
         <tabset class="nav-full-width">
-          <tab heading="raw images" (selectTab)="setTab('images')">
+          <tab heading="raw" (selectTab)="setTab('images')">
             <div *ngIf="activeTab === 'images'">
               <div class="row">
                 <div class="col-md-12">
