chore: made organization a required field of UAV in the UI

--- a/uasdm-ui/src/app/site/component/uav/uav.component.html
+++ b/uasdm-ui/src/app/site/component/uav/uav.component.html
@@ -55,7 +55,7 @@
         </div>
         <div class="form-group">
           <label>Organization</label>
-          <organization-field name="organization" [(value)]="uav.organization" [disabled]="mode === 'READ'">
+          <organization-field name="organization" [(value)]="uav.organization" [disabled]="mode === 'READ'" [required]="true">
           </organization-field>
         </div>
         <div *ngIf="isAdmin && mode === 'WRITE'" class="btn-holder" style="text-align: right;">
