chore: remove 'bare earth' verbage

--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -213,7 +213,7 @@
       </td>
     </tr>
     <tr class="artifact-row">
-      <td colspan="6">Generate ground surface model - bare earth</td>
+      <td colspan="6">Generate ground surface model</td>
       <td>
         <boolean-field [(value)]="config.generateGSM" label="Generate"></boolean-field>
       </td>
