--- a/uasdm-ui/src/app/site/component/modal/process-run-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/process-run-modal.component.html
@@ -125,7 +125,7 @@
 						</td>
 					</tr>
 					<tr class="artifact-row">
-						<td colspan="6">Generate ground surface model - bare earth</td>
+						<td colspan="6">Generate ground surface model</td>
 						<td>
 							<boolean-field [(value)]="configuration.generateGSM" label="Generate"
 								[disabled]="true"></boolean-field>
