chore: updated styling for geo platform panel

--- a/uasdm-ui/src/app/site/component/know-stac-panel/know-stac-panel.component.html
+++ b/uasdm-ui/src/app/site/component/know-stac-panel/know-stac-panel.component.html
@@ -1,12 +1,16 @@
 <ng-container>
     <div class="row">
         <div class="col-md-12 text-center">
-            Search GeoPlatform for Products in Map Extent
+            <h4>
+                Search GeoPlatform for Products in Map Extent
+            </h4>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-12 center-block">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-10 center-block">
             <div class="btn-holder" style="text-align: right;padding: 0 10px 10px 0;">
                 <button type="button" (click)="handleClose()" class="btn btn-default" role="button"
                     aria-disabled="false" style="padding: 4px 18px;">
@@ -23,6 +27,8 @@
                     Search
                 </button>
             </div>
+        </div>
+        <div class="col-md-1">
         </div>
     </div>
 
