chore: improve site viewer styling

--- a/uasdm-ui/src/app/site/component/product-panel/product-panel.component.html
+++ b/uasdm-ui/src/app/site/component/product-panel/product-panel.component.html
@@ -30,7 +30,7 @@
             </h4>
         </div>
 
-        <div *ngFor="let view of views" class="list-group-item">
+        <div *ngFor="let view of views" class="list-group-item" style="padding-left: 3px; padding-right: 3px;">
             <div class="card card-default" [@fadeInOnEnter] [@fadeOutOnLeave]>
                 <div class="card-body">
                     <h5 class="card-title" style="color:#a0a0a0">
