chore: fix padding issue with hierarchy viewer

--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -287,9 +287,9 @@
 
             <div id="hierarchy-tree-container"
               class="location-management-widget-section location-management-list-container" [style]="(current != null && current.type === 0) ?  
-                'height: calc(100vh - 257px);overflow-y: auto;overflow-x:hidden;' :
-                (syncs.length === 0 ? 'height: calc(100vh - 325px);overflow-y: auto;overflow-x:hidden;' :
-                'height: calc(100vh - 390px);overflow-y: auto;overflow-x:hidden;')">
+                'height: calc(100vh - 257px);overflow-y: auto;overflow-x:hidden;padding: 10px;' :
+                (syncs.length === 0 ? 'height: calc(100vh - 325px);overflow-y: auto;overflow-x:hidden;padding: 10px;' :
+                'height: calc(100vh - 390px);overflow-y: auto;overflow-x:hidden;padding: 10px;')">
 
 
               <div class="row">
